--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -12,7 +12,7 @@ header {
       display: flex;
       justify-content: center;
       gap: 4rem;
-      border-bottom: 1px solid rgba($primary-color, .4);
+      border-bottom: 1px solid rgba(#b3b3b3, .4);
     }
 
     .nav-item {
@@ -24,9 +24,17 @@ header {
         white-space: nowrap;
 
         &.active {
-          color: $button-bg;
+          color: #1a1a1a;
         }
       }
+    }
+
+    .sliding-indicator {
+      position: absolute;
+      bottom: -0.1rem;
+      height: 1.2px;
+      background-color: #242424;
+      transition: transform 0.3s ease, width 0.3s ease;
     }
   }
 }
